# omero_annotate_ai

./: .gitattributes  .gitignore  Makefile  README.md  TODO_LIST.md  mkdocs.yml  pyproject.toml  pytest.ini
.binder/: environment.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
annotations/: annotation_config_default_annotation_workflow.yaml
docs/: conf.py  configuration.md  gen_ref_pages.py  index.md  index.rst  installation.md  installation.rst
docs/api/: index.md  modules.rst  omero_annotate_ai.rst
docs/includes/: abbreviations.md
docs/stylesheets/: extra.css
docs/tutorials/: batch-processing.md  biapy-integration.md  cellpose-integration.md  index.md  microsam-annotation-pipeline.md  training-data-prep.md
examples/: cleanup_annotation.ipynb  demo_connection_widget.py  omero-annotate-ai-3d.ipynb  omero-annotate-ai-annotation-widget.ipynb  omero-annotate-ai-annotation.ipynb  omero-annotate-ai-batch.ipynb  omero-annotate-ai-cellpose.ipynb  omero-annotate-ai-from-yaml.ipynb  omero-annotate-ai-pipeline.ipynb  omero-annotate-ai-streamlined.ipynb  omero-microsam-training-automated.ipynb  omero-microsam-training.ipynb  omero-test_model-microsam.ipynb  omero-training-microsam.ipynb  omero-training_DL4mic.ipynb  project_annotation_workflow.py  test_annotation_pipeline.py  test_config.yaml  test_omero_connection_widget.py  test_widget.py
examples/other/: cleanup_annotation.ipynb
examples/training/: omero-training_biapy.ipynb
gui/: README.md
gui/omero_web_plugin/: README.md
gui/omero_web_plugin/omero_annotate_web/: apps.py  urls.py  views.py
gui/omero_web_plugin/omero_annotate_web/static/omero_annotate_web/js/: App.jsx
gui/omero_web_plugin/omero_annotate_web/templates/omero_annotate_web/: annotation_interface.html
gui/streamlit_prototype/: README.md  app.py  requirements.txt
notebooks/: README.md
notebooks/annotation/: omero-annotate-ai-annotation-widget copy.ipynb  omero-annotate-ai-annotation-widget.ipynb  omero-annotate-ai-annotation.py  omero-annotate-ai-annotation_dev.ipynb  omero-annotate-ai-cellpose.ipynb  omero-annotate-ai-from-yaml.ipynb
notebooks/annotation/omero_annotations/: annotation_config.yaml
notebooks/jupyter/annotation/: omero-annotate-ai-annotation-widget.ipynb  omero-annotate-ai-cellpose.ipynb  omero-annotate-ai-from-yaml.ipynb
notebooks/jupyter/other/: cleanup_annotations.ipynb
notebooks/jupyter/training/: omero-training-microsam.ipynb  omero-training_DL4mic.ipynb  omero-training_biapy.ipynb
notebooks/marimo/: omero-annotate-ai-annotation.py  omero-annotate-ai-cellpose.py  omero-annotate-ai-from-yaml.py  omero-idr-demo.py  omero-training-microsam.py
notebooks/training/: omero-training-microsam.ipynb
omero_annotate_ai/core/: config.py  pipeline.py
omero_annotate_ai/omero/: __init__.py  omero_functions.py  omero_utils.py
omero_annotate_ai/processing/: file_io_functions.py  image_functions.py
omero_annotate_ai/widgets/: __init__.py  config_widget.py  omero_connection_widget.py
qupath-extension/: README.md  build.gradle.kts  settings.gradle.kts
qupath-extension/src/main/java/qupath/ext/omero/annotate/: OmeroAnnotateExtension.java
qupath-extension/src/main/java/qupath/ext/omero/annotate/core/: AnnotationConfig.java  ImageAnnotationRecord.java  LocalTrackingTable.java  TrainingDataExporter.java  WorkflowManager.java
qupath-extension/src/main/java/qupath/ext/omero/annotate/omero/: OmeroConnectionManager.java  OmeroTableManager.java  OmeroUploader.java
qupath-extension/src/main/java/qupath/ext/omero/annotate/ui/: AnnotateDialog.java  ConfigurePane.java  ConnectionPane.java  RunExportPane.java
qupath-extension/src/main/java/qupath/ext/omero/annotate/util/: MaskGenerator.java  PatchCoordinateGenerator.java
src/omero_annotate_ai/: __init__.py
src/omero_annotate_ai/core/: __init__.py  annotation_config.py  annotation_pipeline.py  config.py  pipeline.py
src/omero_annotate_ai/napari_plugin/: __init__.py  _widget.py  _worker.py  napari.yaml
src/omero_annotate_ai/omero/: __init__.py  omero_functions.py  omero_utils.py  simple_connection.py
src/omero_annotate_ai/processing/: __init__.py  file_io_functions.py  image_functions.py  training_functions.py  training_utils.py  utils.py
src/omero_annotate_ai/utils/: logging.py
src/omero_annotate_ai/widgets/: __init__.py  container_annotation_widget.py  omero_connection_widget.py  project_annotation_widget.py  training_data_widget.py  workflow_widget.py
tests/: README.md  README_test_scripts.md  __init__.py  conftest.py  docker-compose.yml  test_config.py  test_file_io_functions.py  test_image_functions.py  test_installation.py  test_omero_functions.py  test_omero_integration.py  test_pipeline.py  test_training_config_validation.py  test_training_functions.py  test_utils.py  test_well_filtering.py  test_widgets.py
